--- a/app/views/components/_setting_card.html.haml
+++ b/app/views/components/_setting_card.html.haml
@@ -1,4 +1,4 @@
-.col.px-4.summary{class:setting_card[:colour]}
+.col.px-4.summary{class:setting_card[:colour], data: {href: setting_card[:href] } }
   %h2
     = setting_card[:title]
   .stat
