Needed file to load the new dashboard stylesheet.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 @import "tabs";
 @import "charts";
 @import "custom";
+@import "newdash";
 @import "jquery.comiseo.daterangepicker";
 @import "jquery-ui.theme.min";
 @import "jquery-ui.structure.min";
