Morning Update store

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -1,7 +1,7 @@
 -#query_tests_chart = [[{'aaa':23},{'bbb':42}, {'site':90}], [{'aaa':33},{'bbb':32}, {'site':30}]];
 -#devices_grouped = [{label:'Sally',value:42},{label:'Bobby',value:25},{label:'George',value:15},{label:'Site',value:8},{label:'Another Site',value:4}];
 -#query_site_tests_chart = [['Sally',42],['Bobby',25],['George',15],['Site',8],['Another Site',4]];
--#average_test_per_site_chart = {'site':'Splodge','tests':{'name':'slkj','values':[23,46,124]}};
+-average_test_per_site_chart = [{:site=>"parentsite", :peak=>26, :average=>12.083334},{:site=>"parentsite", :peak=>26, :average=>70.5833},{:site=>"wimbledon", :peak=>26, :average=>0.166}];
 -#failed_labels = ['Total','Failed'];
 -failed_tests = [['Total',55,'chart-box-tick'],['Failed',5,'chart-box-exclam']];
 -#average_tests_per_technician_chart = [1];
