New Vertical Multiple Bar Graph (nearly done)

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -1,7 +1,7 @@
 -#query_tests_chart = [[{'aaa':23},{'bbb':42}, {'site':90}], [{'aaa':33},{'bbb':32}, {'site':30}]];
 -#devices_grouped = [{label:'Sally',value:42},{label:'Bobby',value:25},{label:'George',value:15},{label:'Site',value:8},{label:'Another Site',value:4}];
 -#query_site_tests_chart = [['Sally',42],['Bobby',25],['George',15],['Site',8],['Another Site',4]];
--average_test_per_site_chart = [{:site=>"parentsite", :peak=>26, :average=>12.083334},{:site=>"parentsite", :peak=>26, :average=>70.5833},{:site=>"wimbledon", :peak=>26, :average=>0.166}];
+-#average_test_per_site_chart = [{:site=>"AbbA", :peak=>26, :average=>12},{:site=>"BB", :peak=>26, :average=>70},{:site=>"CC", :peak=>26, :average=>0},{:site=>"Aardvark", :peak=>42, :average=>21}];
 -#failed_labels = ['Total','Failed'];
 -failed_tests = [['Total',55,'chart-box-tick'],['Failed',5,'chart-box-exclam']];
 -#average_tests_per_technician_chart = [1];
@@ -100,7 +100,7 @@
         .box-content
           = react_component('GroupedVerticalBarChart', height: 600, width: 600, chart_div: 'chart_average_test_per_site_chart', data: average_test_per_site_chart, colors: standard_colours)
           #chart_average_test_per_site_chart
-          = image_tag('img/charts/avg-tests-site.png')
+          =#= image_tag('img/charts/avg-tests-site.png')
 
     -if(devices_grouped.present?)
       .col.col-4.box
