--- a/app/assets/stylesheets/_charts.scss
+++ b/app/assets/stylesheets/_charts.scss
@@ -26,10 +26,12 @@ svg {
 {
   path {
     fill: none;
+    stroke-width: 1;
+    stroke: rgba(0,0,0,0.5);
   }
   .tick line {
     stroke-width: 1;
-    stroke: rgba(0,0,0,0.1);
+    stroke: rgba(0,0,0,0.2);
   }
   font-size: 12px;
 }
@@ -38,7 +40,6 @@ svg {
 {
   font-size: 14px;
   fill: #333;
-  text-align: right;
 }
 
 .chart-axis-label-small
