--- a/app/views/shared/_header_nav.haml
+++ b/app/views/shared/_header_nav.haml
@@ -13,7 +13,7 @@
         -# ------------ HOME
         - if has_access?(TestResult, Policy::Actions::MEDICAL_DASHBOARD)
           %li{:class => params[:controller] == "dashboards" && params[:action] == "index" && "active"}
-            = link_to "Home", '/dashboards/index'
+            = link_to "Home", dashboard_path
 
         -# ------------ REPORTS (just unindent the lines below to reactivate)
           - if has_access?(TestResult, Policy::Actions::MEDICAL_DASHBOARD)
@@ -23,30 +23,28 @@
         -# ------------ PATIENTS
         - if has_access_to_patients_index?
           %li{:class => params[:controller] == "patients" && "active"}
-            = link_to "Patients", '/patients/'
+            = link_to "Patients", patients_path
 
         -# ------------ TEST Orders
         - if has_access_to_test_results_index?
           %li{:class => ["test_orders", "encounters"].include?(params[:controller]) && "active"}
-            = link_to "Test Orders", '/test_results?display_as=test_order'
+            = link_to "Test Orders", test_results_path + '&display_as=test_order'
 
         -# ------------ TEST RESULTS
         - if has_access_to_test_results_index?
           %li{:class => ["test_results", "encounters"].include?(params[:controller]) && "active"}
-            = link_to "Test Results", '/test_results'
+            = link_to "Test Results", test_results_path
 
 
         -# ------------ DEVICES
         - if has_access_to_devices_index?
           %li{:class => params[:controller] == "devices" && "active"}
-            = link_to "Devices", '/devices/'
+            = link_to "Devices", devices_path
 
         -# ------------ SETTINGS
         - if has_access_to_settings?
           %li{:class => (["roles", "policies", "alerts", "incidents", "alert_messages"].include?(params[:controller]) || params[:action] == "settings") && "active"}
-            = link_to "Settings", '/settings'
-
-
+            = link_to "Settings", settings_path
 
         -# ------------ SITES
           - if has_access_to_sites_index?
