--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@
 @import "charts";
 @import "custom";
 @import "newdash";
+@import "newlayout";
 @import "jquery.comiseo.daterangepicker";
 @import "jquery-ui.theme.min";
 @import "jquery-ui.structure.min";
