--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -1,10 +1,10 @@
--#query_tests_chart = [[{'aaa':23},{'bbb':42}, {'site':90}], [{'aaa':33},{'bbb':32}, {'site':30}]];
--#devices_grouped = [{label:'Sally',value:42},{label:'Bobby',value:25},{label:'George',value:15},{label:'Site',value:8},{label:'Another Site',value:4}];
--#query_site_tests_chart = [['Sally',42],['Bobby',25],['George',15],['Site',8],['Another Site',4]];
--#average_test_per_site_chart = [{:site=>"AbbA", :peak=>26, :average=>12},{:site=>"BB", :peak=>26, :average=>70},{:site=>"CC", :peak=>26, :average=>0},{:site=>"Aardvark", :peak=>42, :average=>21}];
+-query_tests_chart = [{_label:'Jun',avg:21,peak:12},{_label:'Jul',avg:24,peak:16}];
+-devices_grouped = [{_label:'Sally',_value:42},{_label:'Bobby',_value:25},{_label:'George',_value:15},{_label:'Site',_value:8},{_label:'Another Site',_value:4}];
+-query_site_tests_chart = [ {"_label":"site20", "_value":2 }, {"_label":"site40", "_value":3 }];
+-average_test_per_site_chart = [{:_label=>"AbbA", :peak=>26, :average=>12.2343},{:_label=>"BB", :peak=>26, :average=>70.12341234},{:_label=>"CC", :peak=>26, :average=>0.76347},{:_label=>"Aardvark", :peak=>42, :average=>21.345234},{:_label=>"Thirds", :peak=>66, :average=>33},{:_label=>"Fork", :peak=>12, :average=>5},{:_label=>"Spoon", :peak=>40, :average=>45}];
 -#failed_labels = ['Total','Failed'];
--failed_tests = [['Total',55,'chart-box-tick'],['Failed',5,'chart-box-exclam']];
--#average_tests_per_technician_chart = [1];
+-failed_tests = [ {"_label":"Total", "_value":55, "_img":"chart-box-tick"}, {"_label":"Failed", "_value":15, "_img":"chart-box-exclam"} ];
+-average_tests_per_technician_chart = [{_label:"JaneDoe", "Peak Tests":10, "Avg Tests":2}];
 -#query_devices_not_reporting_chart = [1];
 -#error_codes_by_device = [1];
 
@@ -67,9 +67,10 @@
           = image_tag('img/test-tube-rack.png')
           %h3 Total Tests
         .box-content
+          = react_component('GroupedVerticalBarChart', data: query_tests_chart, height: 300, width: 800, chart_div: 'chart_total_tests', colors: standard_colours)
+          #chart_total_tests
           -#= react_component('BarChart', data: query_tests_chart, height: 300, y_label: 'Tests Run', colors: standard_colours)
-          -#= react_component('BarChart', data: query_tests_chart, height: 300, y_label: 'Tests Run', colors: standard_colours)
-          = image_tag('img/charts/total-tests.png')
+          -#= image_tag('img/charts/total-tests.png')
 
     -if(failed_tests.present?)
       .col.col-4.box
@@ -117,7 +118,7 @@
           = image_tag('img/user.png')
           %h3 Average Tests by Technician
         .box-content
-          = react_component('GroupedHorizontalBarChart', data: average_tests_per_technician_chart, width: 600, chart_div: 'chart_average_tests', label: 'DAYS', colors: standard_colours)
+          = react_component('GroupedVerticalBarChart', data: average_tests_per_technician_chart, height: 250, width: 600, chart_div: 'chart_average_tests', label: 'DAYS', colors: standard_colours)
           #chart_average_tests
           -#= image_tag('img/charts/tests-technician.png')
 
