--- a/app/assets/stylesheets/_newdash.scss
+++ b/app/assets/stylesheets/_newdash.scss
@@ -291,11 +291,11 @@ body {
 
 
 
-#filters-form{
+.section #filters-form{
 background:#dc602e;
 }
 
-#filters-form fieldset{
+.section #filters-form fieldset{
 color:white;
 font-weight:bold;
 padding-left:20px;
@@ -303,42 +303,44 @@ padding-right:30px;
 border-right:1px solid #F4F4F4;
 }
 
-#filters-form fieldset:first-child{
+.section #filters-form fieldset:first-child{
 float:left;
 width:260px;
 }
 
-#filters-form fieldset:first-child label{
+.section #filters-form fieldset:first-child label{
 float:left;
 width:100px;
 color:white;
 font-weight:bold;
 }
 
-#filters-form fieldset:first-child .Select{
+.section #filters-form fieldset:first-child .Select{
 float:left;
 width:100px;
 margin-top:2px;
 border-bottom:1px solid #fff;
 }
 
-#filters-form fieldset:first-child .Select .Select-control .Select-placeholder{
+.section #filters-form fieldset:first-child .Select .Select-control .Select-placeholder{
 color:white;
 }
 
 
-#filters-form fieldset label{
+.section #filters-form fieldset label{
 color:white;
 font-weight:bold;
 }
 
-#filters-form #query_button{
+.section #filters-form #query_button{
 height:40px;
 line-height: 10px;
 margin-left:30px;
 }
 
-
+.section .box header{
+height:auto;
+}
 
 
 
