--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -12,9 +12,8 @@ background:#555354;
 background:#e06023;
 }
 
-.show-navigation-context-picker #context_side_bar .search-sites {
-background:#03abae;
-
+#context_side_bar .search-sites {
+background:#03abae !important;
 }
 
 .sites-tree-view li.expanded > a > button {
@@ -42,4 +41,39 @@ overflow-y:auto;
 
 #contentcontainer {
 overflow:auto;
+}
+
+
+.wrapper{
+padding-top:60px;
+}
+
+.wrapper > header{
+position:fixed;
+width:100%;
+top:0px;
+z-index:99999;
+}
+
+
+
+.chromeimage{
+width:40px;
+float:left;
+border-top:1px solid #ddd;
+padding-top:12px;
+}
+
+
+.chrometest{
+float:left;
+margin-top:px;
+border-top:1px solid #ddd;
+padding-top:10px;
+}
+
+.chrometest p{
+margin:0px;
+font-size:12px;
+color:#777
 }
