--- a/app/views/sites/_form.html.haml
+++ b/app/views/sites/_form.html.haml
@@ -33,7 +33,7 @@
       - unless @site.new_record?
         = render 'side'
 
-  = site_address_component(@site)
+  = render partial: "shared/address", :locals => { :f => f , model_type: "site"}
   .row
     .col.pe-2
       = f.label :sample_id_reset_policy, "Sample ID reset policy"
