--- a/app/views/devices/_filters.haml
+++ b/app/views/devices/_filters.haml
@@ -1,14 +1,24 @@
 - content_for(:subheader) do
-  .row.center.filters
-    .col.pe-10
-      .row
-        .col
-          %h1
-            - if @can_create
-              = link_to "+", new_device_path, class: 'btn-add side-link fix', title: 'Add Device'
-            Devices
-      %form#filters-form{action: devices_path, "data-auto-submit" => true}
-        %input{type: "hidden", name: "page_size", value: @page_size}
+
+  .filterbar.filterbartest
+    .heading
+      .title
+        - if @can_create
+          = link_to "+", new_device_path, class: 'btn-add side-link fix', title: 'Add Device'
+        Devices
+
+    
+	
+    .topfilteropt
+      %input#query_button.btn-primary.filtershow(type='button' value='Show Filters')
+  
+  %form.filteroptions#filters-form{action: devices_path, "data-auto-submit" => true}
+    %input{type: "hidden", name: "page_size", value: @page_size}
+    .row.center.custom_filters
+      .col.pe-10
+	  
+      .advanced
+	  
         .row
           .filter
             %label.block Manufacturer
