--- a/app/views/devices/new.haml
+++ b/app/views/devices/new.haml
@@ -1,11 +1,12 @@
 - content_for(:subheader) do
-  .row.center.add-new
-    .col.pe-10
-      .row
-        .col
-          %h2
-            = link_to devices_path, class: 'side-link', title: 'Back' do
-              = image_tag "arrow-left-white.png"
-            New Device
+  .devicearea
+    .row.center.add-new
+      .col.pe-10
+        .row
+          .col
+            %h2
+              = link_to devices_path, class: 'side-link', title: 'Back' do
+                = image_tag "arrow-left-white.png"
+              New Device
 
 = render 'form'
