--- a/app/policies/owner/institution.json.erb
+++ b/app/policies/owner/institution.json.erb
@@ -6,6 +6,7 @@
         "institution:read",
         "institution:update",
         "institution:delete",
+        "institution:registerDeviceModel",
         "institution:registerDevice",
         "institution:createSite",
         "institution:createPatient",
@@ -18,11 +19,25 @@
       "resource": [
         "patient?institution=<%= institution_id %>",
         "site?institution=<%= institution_id %>",
+        "deviceModel?institution=<%= institution_id %>",
         "device?institution=<%= institution_id %>",
         "testResult?institution=<%= institution_id %>",
         "encounter?institution=<%= institution_id %>"
       ],
       "action": "*",
+      "delegable": true
+    },
+    {
+      "resource": [
+        "deviceModel?institution=<%= institution_id %>",
+        "device?institution=<%= institution_id %>"
+      ],
+      "action": "*",
+      "delegable": true
+    },
+    {
+      "resource": "deviceModel",
+      "action": "deviceModel:read",
       "delegable": true
     },
     {
