--- a/app/views/sites/_form.html.haml
+++ b/app/views/sites/_form.html.haml
@@ -75,7 +75,9 @@
     cdx_select_on_change "site[parent_id]", (parent_id) ->
       if parent_id? && (Number(parent_id) > 0)
         $.get '/sites/' + parent_id, (result) ->
-          # result.sample_id_reset_policy
-          $( "input[name='site[sample_id_reset_policy]']" ).val('monthly')
-          $('.sample-id-reset .Select-placeholder').text('Monthly')
+          return unless result? && result.sample_id_reset_policy?
+          sample_id_reset_policy = result.sample_id_reset_policy.charAt(0).toUpperCase() + result.sample_id_reset_policy.slice(1)
+          $( "input[name='site[sample_id_reset_policy]']" ).val(result.sample_id_reset_policy)
+          $('.sample-id-reset .Select-placeholder').text(sample_id_reset_policy)
+          #$('.sample-id-reset .Select-placeholder input').val(result.sample_id_reset_policy)
           #$('.sample-id-reset .Select-placeholder').trigger('change')
