--- a/app/views/devices/_form.haml
+++ b/app/views/devices/_form.haml
@@ -53,7 +53,7 @@
     .col
       = f.submit 'Save', class: 'btn-primary'
       - if @can_delete
-        = link_to "Delete", @device, method: :delete, data: { confirm: "You are about to permanently delete this site. This action CANNOT be undone. Are you sure you want to proceed?" }, class: 'btn-secondary pull-right'
+        = link_to "Delete", @device, method: :delete, data: { confirm: "You are about to permanently delete this device. This action CANNOT be undone. Are you sure you want to proceed?" }, class: 'btn-secondary pull-right'
 
 :coffeescript
   $ ->
