Add ftp settings card.

--- a/app/views/home/settings.html.haml
+++ b/app/views/home/settings.html.haml
@@ -42,3 +42,8 @@
         = setting_card title: "Users", href: users_path, icon: 'fa-users', colour:'blue' do | c |
           - c.body do
             Manager Users
+
+      -# ------------ FTP settings
+      = setting_card title: "FTP", href: institutions_path, icon: 'fa-download', colour:'silver' do | c |
+        - c.body do
+          Device FTP settings
