--- a/app/views/home/settings.html.haml
+++ b/app/views/home/settings.html.haml
@@ -44,6 +44,7 @@
             Manager Users
 
       -# ------------ FTP settings
-      = setting_card title: "FTP", href: institutions_path, icon: 'fa-download', colour:'silver' do | c |
-        - c.body do
-          Device FTP settings
+      - if @institution && has_access?(@institution, Policy::Actions::UPDATE_INSTITUTION)
+        = setting_card title: "FTP", href: edit_ftp_setting_path(@institution), icon: 'fa-download', colour:'light-green' do | c |
+          - c.body do
+            Device FTP settings
