--- a/app/views/patients/show.html.haml
+++ b/app/views/patients/show.html.haml
@@ -11,12 +11,6 @@
   .container
     = render partial: 'patient_summary', locals: { patient: @patient }
 
-    - if @encounters.empty?
-      = empty_data icon: 'icon-outline-test xx-large' do |c|
-        - c.body do
-          %h1 No medical history
-          %p Create test orders in order to start the medical history
-    - else
-      = render partial: 'patient_episode_summary', locals: { encounters: @encounters }
+    = render partial: 'patient_episode_summary', locals: { encounters: @encounters }
 
-    = render partial: 'patient_history', locals: { patient: @patient }
+    = render partial: 'patient_history', locals: { patient: @patient, can_add_test_orders: !@encounters.empty? }
