--- a/app/views/episodes/new.haml
+++ b/app/views/episodes/new.haml
@@ -10,23 +10,37 @@
           %li
             = link_to 'Cancel', '#', class: 'button cancel', title: 'Cancel'
 
-    = form_for(@patient_episode, html: { class: 'zebra' }, url: '/' ) do |f|
-      .row
-        .col-6
-          = f.label 'Diagnosis'
-        .col-6
-          = f.collection_select :diagnosis, Episode.diagnosis_options, :id, :name, include_blank: true
-      .row
-        .col-6
-          = f.label 'HIV Status'
-        .col-6
-      .row
-        .col-6
-          = f.label 'Drug Resistance'
-        .col-6
-          = f.collection_select :drug_resistance, Episode.drug_resistance_options, :id, :name, include_blank: true
-      .row
-        .col-6
-          = f.label 'Treatment Outcome'
-        .col-6
-          = f.collection_select :outcome, Episode.treatment_outcome_options, :id, :name, include_blank: true
+    = form_for([@patient, @episode], html: { class: 'zebra' } ) do |f|
+      .panel
+        .row
+          .col-6
+            = f.label :diagnosis, 'Diagnosis'
+          .col-6
+            = f.collection_select :diagnosis, Episode.diagnosis_options, :id, :name, include_blank: true
+        .row
+          .col-6
+            = f.label 'Diagnosis classify by Anatomical site'
+          .col-6
+            = collection_radio_buttons(:anatomical_site_diagnosis, '', Episode.anatomical_diagnosis_options, :id, :name)
+        .row
+          .col-6
+            = f.label 'History of Previous Treatment'
+          .col-6
+            = f.collection_select :initial_history, Episode.initial_history_options, :id, :name, include_blank: true
+            %hr
+            = f.collection_select :previous_history, Episode.previous_history_options, :id, :name, include_blank: true
+        .row
+          .col-6
+            = f.label 'HIV Status'
+          .col-6
+            = f.collection_select :diagnosis, Episode.hiv_status_options, :id, :name, include_blank: true
+        .row
+          .col-6
+            = f.label 'Drug Resistance'
+          .col-6
+            = f.collection_select :drug_resistance, Episode.drug_resistance_options, :id, :name, include_blank: true
+        .row
+          .col-6
+            = f.label 'Treatment Outcome'
+          .col-6
+            = f.collection_select :outcome, Episode.treatment_outcome_options, :id, :name, include_blank: true
